<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".View.MenuActivity"
        android:background="@color/white">


    <Button
            android:text="@string/speak2me"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:id="@+id/speak2me" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_width="110dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/followme"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/downloadmanager"/>
    <Button
            android:text="@string/manual"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:id="@+id/manual" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/speak2me"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/downloadmanager"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/followme"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:id="@+id/followme"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/maponly"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:layout_width="110dp"
            android:layout_height="47dp"
            android:id="@+id/maponly"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/followme"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/speak2me"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"/>
    <Button
            android:text="@string/download"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:id="@+id/downloadmanager"
            android:layout_marginBottom="56dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/example"
            android:layout_width="127dp"
            android:layout_height="wrap_content"
            android:id="@+id/numberOfCurrentTram" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textAlignment="center" android:textSize="36sp" android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:background="@drawable/border"

            app:layout_constraintHorizontal_bias="0.502" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.04"/>
    <Button
            android:text="@string/right"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:layout_width="100dp"
            android:id="@+id/rightTram"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="24sp" android:layout_height="wrap_content"
            android:textStyle="bold" android:textAllCaps="false"
            android:layout_marginEnd="60dp"
            app:layout_constraintStart_toEndOf="@+id/textView" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/numberOfCurrentTram"/>
    <Button
            android:text="@string/left"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:layout_width="100dp"
            android:id="@+id/leftTram"
            android:textSize="24sp" android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:textStyle="bold" android:layout_marginStart="60dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/textView"
            app:layout_constraintHorizontal_bias="1.0" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/numberOfCurrentTram"/>
    <Switch
            android:text="iránytű"
            android:layout_width="117dp"
            android:layout_height="25dp"
            android:id="@+id/compass" app:layout_constraintStart_toEndOf="@+id/followme"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.833"
            android:splitTrack="true" android:checked="false"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.08" android:textAlignment="textEnd"/>
    <Switch
            android:text="hangsegéd"
            android:layout_width="117dp"
            android:layout_height="14dp"
            android:id="@+id/audioHelp" app:layout_constraintStart_toEndOf="@+id/followme"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.833"
            android:splitTrack="true" android:checked="false"
            android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/compass"
            android:textAlignment="textEnd"/>
    <TextView
            android:text="@string/divider"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/numberOfCurrentTram" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textSize="36sp"
            app:layout_constraintHorizontal_bias="0.501"
            android:layout_marginTop="8dp"/>
</android.support.constraint.ConstraintLayout>