<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".View.ManualActivity">

    <Button android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/right"
            android:id="@+id/j"
            android:textSize="24sp" android:layout_alignParentEnd="true"
            android:layout_below="@+id/hibafajta"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/hibafajta" app:layout_constraintStart_toEndOf="@+id/textView2"
            android:layout_marginStart="8dp" android:layout_marginEnd="60dp" app:layout_constraintEnd_toEndOf="parent"/>
    <Button android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/left"
            android:id="@+id/b"
            android:textSize="24sp" android:layout_alignParentStart="true"
            android:layout_below="@+id/hibafajta"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/hibafajta" android:layout_marginEnd="0dp"
            app:layout_constraintEnd_toStartOf="@+id/textView2" android:layout_marginStart="60dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/divider"
            android:textColor="@color/colorPrimary"
            android:layout_width="11dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:textSize="36sp"
            android:layout_below="@+id/hibafajta" android:textAlignment="center"
            android:layout_alignParentStart="true"
            android:layout_marginStart="100dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="100dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/hibafajta" app:layout_constraintHorizontal_bias="0.501"
            android:layout_alignParentEnd="true"/>
    <TextView
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/hibafajta"
            android:text="@string/manual"
            android:textAlignment="center" android:textSize="24sp"
            android:textAllCaps="false" android:textStyle="bold"
            android:layout_alignParentTop="true" android:layout_marginTop="12dp"
    />
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:id="@+id/SW" android:layout_below="@+id/b"
            tools:layout_editor_absoluteX="0dp"
            android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/textView2">

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:id="@+id/manualText"


                  android:textAlignment="textStart" android:textSize="14sp" android:text="hfghfhf"
                  android:layout_marginLeft="10dp" android:layout_marginRight="10dp"
                  android:layout_marginBottom="10dp"/>

    </ScrollView>

</RelativeLayout>
